# cpp-project-template

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build-pipeline.yml
cmake/: QtHelpers.cmake  VcpkgHelpers.cmake  VersionInfo.cmake  version.h.in
include/bar/: bar.h
src/bar/: CMakeLists.txt  bar.cpp
src/bar/tests/: test_bar.cpp
src/foo/: CMakeLists.txt  main.cpp
